[package]
name = "oauth1"
version = "0.3.1"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = "Basic OAuth1 library for Rust."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/oauth1"
repository = "https://github.com/mehcode/oauth1-rs"
keywords = ["oauth", "oauth1"]

[dependencies]
time = "0.1"
rand = "0.6"
url = "1.7"
ring = "0.14"
base64 = "0.10"
