[package]
name = "oauth1"
version = "0.3.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = "Basic OAuth1 library for Rust."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/oauth1"
repository = "https://github.com/mehcode/oauth1-rs"
keywords = ["oauth", "oauth1"]

[dependencies]
time = "0.1"
rand = "0.3"
url = "1.5"
ring = "0.16.9"
base64 = "0.7.0"
